# archivebot

./: .gitignore  Justfile  LICENSE.md  Makefile  README.md  archivebot.toml  initdb.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint.yml
archivebot/: archivebot.py  config.example.py  config.py  db.py  file.py  file_helper.py  helper.py  sentry.py  subscriber.py
archivebot/helper/: __init__.py  file.py  session.py
archivebot/models/: __init__.py  file.py  subscriber.py
