[tool.poetry]
name = "archivebot"
version = "0.1.0"
description = "A telegram bot for backing up and collecting all kinds of media."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/archivebot"

[tool.poetry.dependencies]
python = "^3.9"
cryptg = "^0.2"
telethon = "^1.8.0"
SQLAlchemy = "^1.3"
sqlalchemy-utils = "^0.37"
raven = "^6.10"
toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
